--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     testCompile 'junit:junit:4.12'
     compile 'org.jetbrains:annotations-java5:15.0'
-    
+
     compile 'com.mikepenz:actionitembadge:3.3.1@aar'
 
     //SUB-DEPENDENCIES
@@ -38,4 +38,8 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
+    compile 'org.greenrobot:eventbus:3.0.0'
+
+    compile 'com.mobsandgeeks:android-saripaar:+'
 }
