--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,3 +41,7 @@ dependencies {
 
     compile 'com.mobsandgeeks:android-saripaar:+'
 }
+
+dependencies{
+    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.6.3'
+}
